err/pynetfilter-conntrack.err
Listing '.'...
Listing './bin'...
Compiling './bin/conntrack.py'...
***   File "./bin/conntrack.py", line 18
    print "Module %s is loaded: symbol %r is present" % (module_name, symbol)
                                                    ^
SyntaxError: invalid syntax

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pynetfilter_conntrack'...
Compiling './lib/python3.5/site-packages/pynetfilter_conntrack/conntrack.py'...
***   File "./lib/python3.5/site-packages/pynetfilter_conntrack/conntrack.py", line 12
    except ImportError, err:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pynetfilter_conntrack/ctypes_errno.py'...
***   File "./lib/python3.5/site-packages/pynetfilter_conntrack/ctypes_errno.py", line 14
    except OSError, err:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pynetfilter_conntrack/tools.py'...
***   File "./lib/python3.5/site-packages/pynetfilter_conntrack/tools.py", line 38
    shift = 0L
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pynetfilter_conntrack-0.7.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
